Fix font-family and alignment styling

--- a/docs/CSS/site-styles.css
+++ b/docs/CSS/site-styles.css
@@ -1,5 +1,10 @@
+:root {
+  --bs-body-text-align: center;
+  --bs-body-font-family: Spartan;
+}
+
 body {
-  font-family: Spartan, sans-serif;
+  /* font-family: Spartan, sans-serif; */
   text-align: center;
 }
 
@@ -61,6 +66,45 @@ a:hover {
   padding: 0 20px;
 }
 
+/* Intro Section */
+
+.intro-section {
+  padding: 0 15% ;
+  position: relative;
+  z-index: -1;
+}
+
+.introduction {
+  position: relative;
+  z-index: 1;
+}
+
+.intro-text {
+  font-family: Bilbo Swash Caps, cursive;
+  font-size: 6rem;
+  color: #FCFDFD;
+}
+
+.stylized-img {
+  position: relative;
+  margin-top: -50px;
+}
+
+.brenna-img {
+  position: relative;
+  margin-top: -50px;
+}
+
+/* About Me Section */
+
+.skill {
+  padding: 1.5rem;
+}
+
+.skill-details {
+  padding-bottom: 1rem;
+}
+
 /* Contact Section */
 
 .contact-icon {
@@ -73,6 +117,37 @@ a:hover {
 }
 
 /* Media Breakpoints */
+@media (max-width: 1028px) {
+  .line-break-gold {
+    width: 10%;
+    margin-top: -2rem;
+  }
+
+  .intro-section {
+    padding: 10% 4%;
+  }
+
+  .skill-item {
+    padding: 3rem;
+  }
+}
+
+@media (max-width: 640px) {
+  .intro-section {
+    padding: 5% 0 0;
+  }
+
+  .intro-text {
+    font-size: 4rem;
+  }
+
+  .stylized-img {
+    margin-top: -80px;
+    text-align: center;
+    transform: scale(0.7);
+  }
+}
+
 @media (max-width: 480px) {
   h2{
     font-size: 1.8rem;
@@ -89,4 +164,20 @@ a:hover {
   .container-narrow {
     padding: 7% 10% 0;
   }
+  
+  .intro-text {
+    font-size: 4.5rem;
+  }
+
+  .stylized-img {
+    margin-left: -25px;
+    margin-top: -120px;
+    transform: scale(0.6);
+  }
+
+  .about-me {
+    position: relative;
+    margin-top: -120px;
+  }
+
 }
